Course - Dtos implemented, JsonIdentityInfo removed. Available semesters now adapted according to the semester of the logged in student. Student -  JsonIdentityInfo removed.